# spring-petclinic

./: .gitignore  Cargo.toml  README.md
db/: data.sql  schema.sql
src/: db.rs  main.rs  models.rs
src/controllers/: mod.rs  owner_controller.rs  pet_controller.rs  vet_controller.rs  visit_controller.rs  welcome_controller.rs
src/repositories/: mod.rs  owner_repository.rs  pet_repository.rs  vet_repository.rs  visit_repository.rs
templates/: error.html  layout.html  welcome.html
templates/owners/: createOrUpdateOwnerForm.html  findOwners.html  ownerDetails.html  ownersList.html
templates/pets/: createOrUpdatePetForm.html  createOrUpdateVisitForm.html
templates/vets/: vetList.html
